--- a/index.html
+++ b/index.html
@@ -39,14 +39,18 @@
       }
 
       input[type="submit"] {
+        font-weight: bold;
+        font-size: 16px;
         display: block;
         margin-top: 20px;
-        padding: 10px 20px;
+        padding: 0.5em 1em;
         background-color: #4caf50;
         color: #fff;
-        border: none;
-        border-radius: 5px;
+        border: 3px solid #4caf50;
+        border-radius: 0.5em;
         cursor: pointer;
+        font-family: "Poppins", sans-serif;
+        align-items: center;
       }
 
       input[type="submit"]:hover {
@@ -78,81 +82,81 @@
     <h1>Should I Buy It?</h1>
     <form id="buyForm">
       <h3>Have I thought about it for at least two weeks?</h3>
-      <input type="radio" id="q1_yes" name="q1" value="yes" />
+      <input type="radio" id="q1_yes" name="q1"  />
       <label for="q1_yes">Yes</label>
-      <input type="radio" id="q1_no" name="q1" value="no" />
+      <input type="radio" id="q1_no" name="q1"  />
       <label for="q1_no">No</label>
 
       <h3>Does it solve a problem that I've genuinely noticed?</h3>
-      <input type="radio" id="q2_yes" name="q2" value="yes" />
+      <input type="radio" id="q2_yes" name="q2"  />
       <label for="q2_yes">Yes</label>
-      <input type="radio" id="q2_no" name="q2" value="no" />
+      <input type="radio" id="q2_no" name="q2"  />
       <label for="q2_no">No</label>
 
       <h3>Do I already own something similar?</h3>
-      <input type="radio" id="q3_yes" name="q3" value="yes" />
+      <input type="radio" id="q3_yes" name="q3"  />
       <label for="q3_yes">No</label>
-      <input type="radio" id="q3_no" name="q3" value="no" />
+      <input type="radio" id="q3_no" name="q3"  />
       <label for="q3_no">Yes</label>
 
       <h3>Is buying it worth giving up progress towards my next financial goal?</h3>
-      <input type="radio" id="q4_yes" name="q4" value="yes" />
+      <input type="radio" id="q4_yes" name="q4"  />
       <label for="q4_yes">Yes</label>
-      <input type="radio" id="q4_no" name="q4" value="no" />
+      <input type="radio" id="q4_no" name="q4"  />
       <label for="q4_no">No</label>
 
       <h3>Where will it be in five Years?</h3>
-      <input type="radio" id="q5_yes" name="q5" value="yes" />
+      <input type="radio" id="q5_yes" name="q5"  />
       <label for="q5_yes">I Have A Place In Mind</label>
-      <input type="radio" id="q5_no" name="q5" value="no" />
+      <input type="radio" id="q5_no" name="q5"  />
       <label for="q5_no">Not Sure</label>
 
       <h3>How long will I have to work in order to pay for it?</h3>
-      <input type="radio" id="q6_yes" name="q6" value="yes" />
+      <input type="radio" id="q6_yes" name="q6"  />
       <label for="q6_yes">Not Very Long</label>
-      <input type="radio" id="q6_no" name="q6" value="no" />
+      <input type="radio" id="q6_no" name="q6"  />
       <label for="q6_no">A Significant Amount of Time</label>
 
       <h3>Can I be productive and happy without it?</h3>
-      <input type="radio" id="q7_yes" name="q7" value="yes" />
+      <input type="radio" id="q7_yes" name="q7"  />
       <label for="q7_yes">No</label>
-      <input type="radio" id="q7_no" name="q7" value="no" />
+      <input type="radio" id="q7_no" name="q7"  />
       <label for="q7_no">Yes</label>
       
       <h3>What is the cost of it per use?</h3>
-      <input type="radio" id="q8_yes" name="q8" value="yes" />
+      <input type="radio" id="q8_yes" name="q8"  />
       <label for="q8_yes">Worth My Money</label>
-      <input type="radio" id="q8_no" name="q8" value="no" />
+      <input type="radio" id="q8_no" name="q8"  />
       <label for="q8_no">Not Worth Much</label>
 
       <h3>Does buying it supports my priorities?</h3>
-      <input type="radio" id="q9_yes" name="q9" value="yes" />
+      <input type="radio" id="q9_yes" name="q9"  />
       <label for="q9_yes">Yes</label>
-      <input type="radio" id="q9_no" name="q9" value="no" />
+      <input type="radio" id="q9_no" name="q9"  />
       <label for="q9_no">No</label>
 
       <h3>Is this the best way for me to obtain it?</h3>      
-      <input type="radio" id="q10_yes" name="q10" value="yes" />
+      <input type="radio" id="q10_yes" name="q10"  />
       <label for="q10_yes">Yes</label>
-      <input type="radio" id="q10_no" name="q10" value="no" />
+      <input type="radio" id="q10_no" name="q10"  />
       <label for="q10_no">No</label>
 
       <h3>Is it a high-quality item with a reasonable price tag?</h3>
-      <input type="radio" id="q11_yes" name="q11" value="yes" />
+      <input type="radio" id="q11_yes" name="q11"  />
       <label for="q11_yes">Yes</label>
-      <input type="radio" id="q11_no" name="q11" value="no" />
+      <input type="radio" id="q11_no" name="q11"  />
       <label for="q11_no">No</label>
 
       <h3>What is my current mental state?</h3>
-      <input type="radio" id="q12_yes" name="q12" value="yes" />
+      <input type="radio" id="q12_yes" name="q12"  />
       <label for="q12_yes">Calm and Neutral</label>
-      <input type="radio" id="q12_no" name="q12" value="no" />
+      <input type="radio" id="q12_no" name="q12"  />
       <label for="q12_no">Altered by Internal or External Forces</label>
 
       <h3>What is the real reason I'm considering buying it?</h3>
-      <input type="radio" id="q13_yes" name="q13" value="yes" />
+      <input type="radio" id="q13_yes" name="q13"  />
       <label for="q13_yes">An Intentional Reason</label>
-      <input type="radio" id="q13_no" name="q13" value="no" />
+      <input type="radio" id="q13_no" name="q13"  />
       <label for="q13_no">An Impulsive Reason</label>
 
       <input type="submit" value="Submit" />
@@ -243,7 +247,7 @@
 
           // Determine the result
           let result = buyCount > dontBuyCount ? "BUY" : "DON'T BUY";
-          alert("Result: " + result);
+          alert(result);
         });
     </script>
   </body>
